tests/ui/result_fallback_unbound_cache.rs
use cached::macros::cached;

#[cached(result_fallback = true)]
fn my_fn(k: i32) -> Result<i32, ()> {
    Ok(k)
}

fn main() {}
